Changelog
=========

1.5 - (unreleased)
------------------

1.4 - (2010-06-16)
------------------

 * Fixed width for TOC area so that long titles are not spanning entire page [demarant].
 * Removed redundant related feeds macro in below content area [demarant, #3208].
 * Moved #auto-related portlet to below content [thuliper, #2764]
 * Merged subfolder_view and dc_view [thuliper, #3372]
 * Integrate smart_view with faceted navigation [thuliper, #3340]
 * Can now conifigure which headers JSTOC will pick up [thuliper, #3206]
 * JSTOC now uses absolute URLs [thuliper, #3242]
 * JSTOC is now collapsable [thuliper, #3076]
 * smart_view now works with subfolder_view [thuliper, #3321]
 * Add history and bookmark support in smart_view [thuliper, #3238]

1.3 - (2010-05-07)
------------------

 * Integrated eea-accordion with new theme data centres [thuliper]
 * Beginning of smart_view [thuliper, #3185]
 * Document actions now at the bottom [thuliper, #3151]
 * Make atct_album_view use valentine.imagescales v0.3 fallback image solution [voineali #3305]
 * Make accordion scroll the page to the top when clicked [thuliper, #3169]
 * Automatically open accordion section where there's a selected navigation item [thuliper, #3168]

1.2 - (2010-03-26)
------------------

 * Fix bug where first link in ETC (cross-site-menu) was not clickable [thuliper, #3177]
 * Disable cross site menu popups for IE6 [thuliper, #3175]
 * Fixed atct_album_view title when used in figure context as it is used by
   fancybox [voineali #3156]
 * Added table of contents portlet [thuliper, #3076]

1.1 - (2010-03-16)
------------------

 * Tweaks for gallery-fancybox to work better on small resolutions [thuliper]
 * New subfolder_view for listing contents of subfolders [thuliper, #3102]

1.0 - (2010-03-08)
------------------

 * Show cross-site-menu panels on mouseclick instead of hover [thuliper, #3039]
 * Implemented flexible tooltips in order to be able to add variable length tooltips [voineali, #2986]